--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,6 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
+
+// 引用自己的gradle依赖
+apply from: 'dependences.gradle'
