--- a/laterlist/build.gradle
+++ b/laterlist/build.gradle
@@ -3,14 +3,12 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
-def appDependence = rootProject.ext.app
-
 android {
-    namespace 'com.example.common'
+    namespace 'com.example.laterlist'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.common"
+        applicationId "com.example.laterlist"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -35,12 +33,11 @@ android {
 }
 
 dependencies {
-    implementation appDependence.coreKtx
-    implementation appDependence.appCompat
-    implementation appDependence.material
-    testImplementation appDependence.junit
-    implementation appDependence.navigation
 
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
