--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 rootProject.name = "Later"
 include ':app'
 include ':common'
+include ':laterlist'
+include ':calendar'
