--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
+
+apply plugin: 'therouter'
+
+def appDependence = rootProject.ext.app
 
 android {
     namespace 'com.example.later'
@@ -36,14 +41,20 @@ android {
 }
 
 dependencies {
+    implementation project(':common')
+    implementation project(':home')
+    kapt appDependence.kaptTheRouter
+    implementation appDependence.therouter
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.5.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    testImplementation 'junit:junit:4.13.2'
+
+    implementation appDependence.coreKtx
+    implementation appDependence.appCompat
+    implementation appDependence.material
+    testImplementation appDependence.junit
+    implementation appDependence.navigation
+    implementation appDependence.navigationUi
+    implementation appDependence.constraintlayout
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
