--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'cn.therouter:plugin:1.1.1'
+    }
+}
+
+
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
@@ -7,3 +18,5 @@ plugins {
 
 // 引用自己的gradle依赖
 apply from: 'dependences.gradle'
+
+apply plugin: 'kotlin-kapt'
