--- a/home/build.gradle
+++ b/home/build.gradle
@@ -1,14 +1,14 @@
 plugins {
-    id 'com.android.library'
+    id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.example.calendar'
+    namespace 'com.example.home'
     compileSdk 32
 
     defaultConfig {
-//        applicationId "com.example.calendar"
+        applicationId "com.example.home"
         minSdk 21
         targetSdk 32
         versionCode 1
