--- a/laterlist/build.gradle
+++ b/laterlist/build.gradle
@@ -7,6 +7,10 @@ android {
     namespace 'com.example.laterlist'
     compileSdk 32
 
+    viewBinding{
+        enabled = true
+    }
+
     defaultConfig {
         minSdk 21
         targetSdk 32
