--- a/dependences.gradle
+++ b/dependences.gradle
@@ -8,7 +8,7 @@ ext{
     // Libraries version of the project
     coreKtxVersion = "1.7.0"
     appCompatVersion = "1.4.2"
-    materialVersion = "1.5.0-alpha04"
+    materialVersion = "1.7.0"
     hiltVersion = "1.0.0"
     lifecycleVersion = "2.5.1"
     roomVersion = "2.4.3"
