--- a/laterlist/build.gradle
+++ b/laterlist/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
+def appDependence = rootProject.ext.app
 
 android {
     namespace 'com.example.laterlist'
@@ -36,11 +38,17 @@ android {
 }
 
 dependencies {
+    implementation project(':common')
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    testImplementation 'junit:junit:4.13.2'
+    kapt appDependence.kaptTheRouter
+    implementation appDependence.therouter
+
+    implementation appDependence.coreKtx
+    implementation appDependence.appCompat
+    implementation appDependence.material
+    testImplementation appDependence.junit
+    implementation appDependence.constraintlayout
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
