--- a/laterlist/build.gradle
+++ b/laterlist/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     kapt appDependence.kaptTheRouter
     implementation appDependence.therouter
+    implementation appDependence.shimmer
 
     implementation appDependence.coreKtx
     implementation appDependence.appCompat
