--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,20 @@
 buildscript {
     repositories {
         gradlePluginPortal()
+//        google()  // Google's Maven repository
+//        mavenCentral()  // Maven Central repository
     }
     dependencies {
         classpath 'cn.therouter:plugin:1.1.1'
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
 
+
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
+    id 'com.android.application' version '7.4.0' apply false
+    id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
 
