--- a/dependences.gradle
+++ b/dependences.gradle
@@ -21,6 +21,7 @@ ext{
     pagingVersion = "3.1.1"
     theRouterVersion = "1.1.1"
     shimmerVersion = "0.5.0"
+    navigationFragment= "2.4.1"
 
     app = [
             kaptRoom: "androidx.room:room-compiler:$roomVersion",
@@ -52,7 +53,10 @@ ext{
             kaptTheRouter:"cn.therouter:apt:$theRouterVersion",
             therouter:"cn.therouter:router:$theRouterVersion",
 
-            shimmer: "com.facebook.shimmer:shimmer:${shimmerVersion}"
+            shimmer: "com.facebook.shimmer:shimmer:${shimmerVersion}",
+
+            navigation_fragment: "androidx.navigation:navigation-fragment-ktx:$navigationFragment",
+            navigation_ui_ktx: "androidx.navigation:navigation-ui-ktx:$navigationFragment"
 
     ]
 }
