--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     // Add the Google services Gradle plugin
-//    id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 }
 
 apply plugin: 'therouter'
@@ -61,4 +61,12 @@ dependencies {
 
 //    implementation platform('com.google.firebase:firebase-bom:31.2.0')
 
+    // Import the Firebase BoM
+//    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+//
+//    implementation 'com.google.firebase:firebase-auth-ktx'
+//    implementation 'com.google.firebase:firebase-firestore-ktx'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
