--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,16 @@
 buildscript {
     repositories {
         gradlePluginPortal()
-//        google()  // Google's Maven repository
-//        mavenCentral()  // Maven Central repository
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
     }
     dependencies {
         classpath 'cn.therouter:plugin:1.1.1'
+
+        // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
     }
 }
-
 
 
 plugins {
