--- a/profile/build.gradle
+++ b/profile/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation appDependence.material
     testImplementation appDependence.junit
     implementation appDependence.constraintlayout
+    implementation appDependence.glide
+    implementation appDependence.lifecycle
+    implementation appDependence.lifecycleViewModel
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -57,4 +60,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
+
+
 }
