--- a/laterlist/build.gradle
+++ b/laterlist/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     testImplementation appDependence.junit
     implementation appDependence.constraintlayout
 
+    implementation appDependence.firebase_database
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation appDependence.firebaseAuthKtx
+    implementation appDependence.firebaseFirestoreKtx
+    implementation appDependence.playServicesAuth
 }
