--- a/profile/build.gradle
+++ b/profile/build.gradle
@@ -55,11 +55,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    implementation platform(appDependence.firebaseBom)
 
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-firestore-ktx'
-    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation appDependence.firebaseAuthKtx
+    implementation appDependence.firebaseFirestoreKtx
+    implementation appDependence.playServicesAuth
 
 
 }
