--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -47,6 +47,18 @@ dependencies {
     testImplementation appDependence.junit
     implementation appDependence.constraintlayout
 
+    implementation appDependence.firebase_database
+
+    implementation appDependence.firebaseAuthKtx
+    implementation appDependence.firebaseFirestoreKtx
+    implementation appDependence.playServicesAuth
+    implementation appDependence.room
+    implementation appDependence.room_ktx
+    implementation appDependence.liveData
+    implementation appDependence.lifecycle
+    implementation appDependence.lifecycleViewModel
+    implementation appDependence.viewModel
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
