--- a/common/build.gradle
+++ b/common/build.gradle
@@ -53,7 +53,10 @@ dependencies {
 
     implementation appDependence.room
     implementation appDependence.room_ktx
-    annotationProcessor(appDependence.roomAnnotationProcessor)
+    annotationProcessor appDependence.roomAnnotationProcessor
+
+    kapt(appDependence.roomAnnotationProcessor)
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
