add datastore into the project

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     kapt(appDependence.roomAnnotationProcessor)
 
+    implementation appDependence.datastore_preference
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
