add the datastore to save the openai setting config into local store

--- a/profile/build.gradle
+++ b/profile/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     implementation appDependence.firebaseFirestoreKtx
     implementation appDependence.playServicesAuth
 
+    implementation appDependence.datastore_preference
 
 }
