--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
+    implementation appDependence.datastore_preference
+
 //    implementation platform('com.google.firebase:firebase-bom:31.2.0')
 
     // Import the Firebase BoM
