--- a/common/build.gradle
+++ b/common/build.gradle
@@ -57,9 +57,18 @@ dependencies {
     implementation appDependence.room_ktx
     annotationProcessor appDependence.roomAnnotationProcessor
 
+    implementation appDependence.liveData
+    implementation appDependence.lifecycle
+    implementation appDependence.lifecycleViewModel
+    implementation appDependence.viewModel
+
     kapt(appDependence.roomAnnotationProcessor)
 
     implementation appDependence.datastore_preference
+
+    implementation appDependence.firebaseAuthKtx
+    implementation appDependence.firebaseFirestoreKtx
+    implementation appDependence.firebase_database
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
