--- a/common/build.gradle
+++ b/common/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation appDependence.firebaseFirestoreKtx
     implementation appDependence.firebase_database
 
+    implementation appDependence.work_manager
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
